# fastapi-boi

./: .bumpversion.cfg  .env.test  .flake8  .pre-commit-config.yaml  Dockerfile  JetBrains.gitignore  README.md  alembic.ini  docker-compose.yml  example.env  postgres.env  pyproject.toml
.github/workflows/: build.yml  document.yml  documentation.yml  main.yml
docs/: .gitignore
docs/source/: conf.py  index.rst
documentation/: docusaurus.config.js  package.json
documentation/blog/: 2019-05-28-first-blog-post.md  2019-05-29-long-blog-post.md  2021-08-01-mdx-blog-post.mdx  authors.yml
documentation/blog/2021-08-26-welcome/: index.md
documentation/docs/: README.md  index.md
documentation/src/pages/: index.tsx
postgres/: Dockerfile  init.sh
scripts/: bump_version.sh  check_format.sh  documentation.sh  format_code.sh  format_imports.sh  generate_migrations.sh  lint.sh  run_migrations.sh  test-cov-html.sh  test.sh
src/: app_module.py  main.py  test_main.py
src/alembic/: env.py
src/alembic/versions/: 349a8ecefdb3_auto_generated_migration.py  45d874551c44_description_of_the_migration.py  5d890cc13b34_auto_generated_migration.py  c0c1948f6f6a_auto_generated_migration.py
src/common/: __init__.py  base_model.py  base_schema.py  base_service.py
src/config/: __init__.py  database.py  env.py  env.setup.py  logger.py
src/config/db/: init_db.py  session.py
src/module/: app.py
src/module/health/: health_controller.py
src/module/health/schemas/: health.py
src/module/user/: user.md  user_controller.py  user_model.py  user_service.py
src/module/user/schemas/: user.py  user_create.py  (+1 more)
src/modules/health/: __init__.py  health.controller.py  health_controller.py
src/modules/user/: __init__.py  model.py  service.py  user_controller.py
tests/: conftest.py  test_main.py
(+6 files in other folders)
