[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = ""
authors = ["Shimpy Bansal <shimpydbansal@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
#packages = [{include = "src", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
uvicorn = "^0.23.0"
fastapi = "^0.100.0"
sqlalchemy = "^2.0.19"
opentelemetry-api = "^1.19.0"
opentelemetry-sdk = "^1.19.0"
opentelemetry-instrumentation-fastapi = "^0.40b0"
alembic = "^1.11.1"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.6"
pydantic = {extras = ["email"], version = "^2.1.1"}
pydantic-settings = "^2.0.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.7.0"
sphinx = "^7.0.1"
pytest = "^7.4.0"
pre-commit = "^3.3.3"
sphinx-markdown-builder = "^0.6.2"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"
flake8-docstrings = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
